# Classification-des-demandes-au-service-client-d-une-compagnie-d-assurance

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-docker.txt  tasks.ps1
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routers/: __init__.py  predict.py
docs/: MANUEL_REPLICATION.md
hf_space/: README.md  app.py  requirements.txt
monitoring/: dashboard.py
notebooks/: 01_eda.ipynb  02_construction_modele.ipynb
reports/: report_mlp.txt  report_textcnn.txt
scripts/: compute_baseline.py  evaluate.py  predict.py  train.py
src/claims_classifier/: config.py  utils.py
src/claims_classifier/data/: cleaning.py  dataset.py  loader.py  vocab.py
src/claims_classifier/evaluation/: metrics.py  reports.py
src/claims_classifier/inference/: __init__.py  loader.py
src/claims_classifier/models/: mlp.py  textcnn.py
src/claims_classifier/monitoring/: __init__.py  baseline.py  drift.py  logger.py
src/claims_classifier/training/: losses.py  trainer.py
tests/: test_smoke.py
