[project]
name = "claims-classifier"
version = "0.1.0"
description = "Multi-class classifier for consumer complaints (CFPB)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "tensorboard>=2.20.0",
    "torch>=2.5.1",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.48.0",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" }
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "gradio>=6.15.2",
    "huggingface-hub>=1.16.1",
]

[project.scripts]
# Lance l'API REST. Equivalent : uv run uvicorn api.main:app --host 0.0.0.0 --port 8000
claims-api = "api.main:run"

[tool.pytest.ini_options]
markers = [
    "integration: tests necessitant des artefacts lourds (checkpoint, CSV reel)",
]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line-length geree par le formateur
]

[tool.ruff.lint.per-file-ignores]
"api/dependencies.py" = ["BLE001"]  # exception generique intentionnelle

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claims_classifier", "api"]
